--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,6 +13,10 @@
 	<div class="jumbotron" style="padding-top:100px;">
 	    <h1 class="text-center">Bee Bee Menu</h1>
 	</div>
+	<div class="form-group">
+	    <label for="usr"><h3>No.</h3></label>
+	    <input type="text" class="form-control" id="usr">
+	</div>
 	<div class="container">
 	    <table class="table">
 		<thead>
